--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       </div>
 
       <div class="hero__content">
-        <h1>Discover innovative ways to decorate</h1>
-        <p>
+        <h1 class="hero__title">Discover innovative ways to decorate</h1>
+        <p class="hero__copy">
           We provide unmatched quality, comfort, and style for property owners
           across the country. Our experts combine form and function in bringing
           your vision to life. Create a room in your own style with our
@@ -92,11 +92,13 @@
           love.
         </p>
         <a
-          href="#"
-          class="btn--text"
-        >
-          Shop Now
-        </a>
+  href="#"
+  class="btn--text"
+>
+  <p>Shop Now</p>
+  <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/></svg>
+</a>
+
       </div>
     </div>
   </section>
