--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             alt="white chairs by a table with a bonsai tree on it"
           />
         </picture>
+        <div class="hero__carousel-buttons">
+          <button class="btn--carousel previous">
+            <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
+          </button>
+          <button class="btn--carousel next">
+            <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
+          </button>
+        </div>
       </div>
 
       <div class="hero__content">
